--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
 
-    background-image: url("sources/fondo.png"); /* Ruta a tu imagen de fondo */
+    background-image: url("sources/fondo.png");
     background-size: cover; /* Ajusta la imagen para cubrir todo el contenedor */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     background-attachment: fixed; /* Fija la imagen en su lugar mientras se desplaza la página */
